# ChangeLog for dev-dotnet/gecko-sharp
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/gecko-sharp/ChangeLog,v 1.34 2005/08/17 02:58:41 latexer Exp $

  17 Aug 2005; Peter Johanson <latexer@gentoo.org> -gecko-sharp-0.7.ebuild:
  Remove one older version.

  23 Jun 2005; Michael Tindal <urilith@gentoo.org>
  +files/gecko-sharp-webshot-fix.patch, gecko-sharp-0.7-r1.ebuild:
  Webshot fix.

  31 May 2005; Herbie Hopkins <herbs@gentoo.org> gecko-sharp-0.6.ebuild,
  gecko-sharp-0.7-r1.ebuild, gecko-sharp-0.10.ebuild:
  Multilib fixes.

  21 May 2005; Tom Martin <slarti@gentoo.org> gecko-sharp-0.10.ebuild:
  Marked ~amd64.

  20 May 2005; Peter Johanson <latexer@gentoo.org> gecko-sharp-0.10.ebuild:
  Fix dep.

*gecko-sharp-0.10 (18 May 2005)

  18 May 2005; Peter Johanson <latexer@gentoo.org> +gecko-sharp-0.10.ebuild:
  Bump.

  17 May 2005; Tom Martin <slarti@gentoo.org> gecko-sharp-0.7-r1.ebuild:
  Fix broken Manifest, and also add a missing ChangeLog entry. Keyword ~amd64
  the masked version.

*gecko-sharp-0.7-r1 (07 May 2005)

  07 May 2005; Peter Johanson <latexer@gentoo.org>
  +files/gecko-sharp-0.7-1.9.3-compat.diff, +gecko-sharp-0.7-r1.ebuild:
  Fix for compiling against gtk-sharp-1.9.3. See bug #91752.

*gecko-sharp-0.7 (02 Apr 2005)

  02 Apr 2005; Peter Johanson <latexer@gentoo.org> +gecko-sharp-0.7.ebuild:
  Bump. New release that compiles against the gtk-sharp-2.0 items, and is
  parallel installable along side the version that builds against the
  gtk-sharp-1.0 items.

  23 Mar 2005; Seemant Kulleen <seemant@gentoo.org>
  gecko-sharp-0.5-r2.ebuild, gecko-sharp-0.6.ebuild:
  change dep from net-www/mozilla to www-client/mozilla

  21 Mar 2005; David Holm <dholm@gentoo.org> gecko-sharp-0.6.ebuild:
  Stable on ppc.

  14 Mar 2005; Peter Johanson <latexer@gentoo.org> gecko-sharp-0.5-r2.ebuild,
  gecko-sharp-0.6.ebuild:
  Mark stable on x86, and make sure we dep on the gtk-sharp-1.0.x stuff (for