@@ -1,6 +1,10 @@
 # ChangeLog for dev-dotnet/gecko-sharp
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/gecko-sharp/ChangeLog,v 1.34 2005/08/17 02:58:41 latexer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-dotnet/gecko-sharp/ChangeLog,v 1.35 2005/09/16 06:28:47 latexer Exp $
+
+  16 Sep 2005; Peter Johanson <latexer@gentoo.org>
+  -gecko-sharp-0.7-r1.ebuild:
+  Remove one older version.
 
   17 Aug 2005; Peter Johanson <latexer@gentoo.org> -gecko-sharp-0.7.ebuild:
   Remove one older version.
